--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -15,7 +15,7 @@
 
 		<div class="sidebar">
 
-			<div class="sidebarTitle">Snoocore 0.0.4</a></div>
+			<div class="sidebarTitle"><a href="https://github.com/trevorsenior/snoocore">Snoocore 0.0.4</a></div>
 
 			<a class="itemInSidebar" href="index.html">
 			Home</a>
