--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -15,7 +15,7 @@
 
 		<div class="sidebar">
 
-			<div class="sidebarTitle"><a href="https://github.com/trevorsenior/snoocore">Snoocore 0.1.0</a></div>
+			<div class="sidebarTitle"><a href="https://github.com/trevorsenior/snoocore">Snoocore 0.2.0</a></div>
 
 			<a class="itemInSidebar" href="index.html">
 			Home</a>
@@ -41,6 +41,9 @@
 
 			<a class="itemInSidebar" href="gotchas.html">
 			Gotcha's</a>
+
+			<a class="itemInSidebar" href="advancedUsage.html">
+			Advanced Usage</a>
 
 			<a class="itemInSidebar" href="node-vs-browser.html">
 			Node vs. Browser</a>
