add in listing documentation

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -38,6 +38,9 @@
 			<a class="itemInSidebar" href="cookies.html">
 			Cookie Login</a>
 
+			<a class="itemInSidebar" href="listings.html">
+			Listings</a>
+
 			<a class="itemInSidebar" href="gotchas.html">
 			Gotcha's</a>
 
