--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,66 +1,69 @@
 <!DOCTYPE html>
 <html>
-	<head>
-		<meta charset="utf-8">
-		<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-		<title>{{ page.title }}</title>
-		<meta name="viewport" content="width=device-width">
+  <head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+    <title>{{ page.title }}</title>
+    <meta name="viewport" content="width=device-width">
 
-		<link rel="stylesheet" href="css/syntax.css">
-		<link rel="stylesheet" href="css/stackedit.css">
-		<link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="css/syntax.css">
+    <link rel="stylesheet" href="css/stackedit.css">
+    <link rel="stylesheet" href="css/main.css">
 
-	</head>
-	<body>
+  </head>
+  <body>
 
-		<div class="sidebar">
+    <div class="sidebar">
 
-			<div class="sidebarTitle"><a href="https://github.com/trevorsenior/snoocore">View on GitHub</a></div>
+      <div class="sidebarTitle"><a href="https://github.com/trevorsenior/snoocore">View on GitHub</a></div>
 
-			<a class="itemInSidebar" href="index.html">
-			Home</a>
+      <a class="itemInSidebar" href="index.html">
+	Home</a>
 
-			<a class="itemInSidebar" href="install.html">
-			Install &amp; Include</a>
+      <a class="itemInSidebar" href="install.html">
+	Install &amp; Include</a>
 
-			<a class="itemInSidebar" href="config.html">
-			Configuration Options</a>
+      <a class="itemInSidebar" href="config.html">
+	Configuration Options</a>
 
-			<a class="itemInSidebar" href="basicUsage.html">
-			Basic Usage</a>
+      <a class="itemInSidebar" href="basicUsage.html">
+	Basic Usage</a>
 
-			<a class="itemInSidebar" href="login.html">
-			Login</a>
+      <a class="itemInSidebar" href="login.html">
+	Login</a>
 
-			<a class="itemInSidebar" href="oauth.html">
-			OAuth Login</a>
+      <a class="itemInSidebar" href="oauth.html">
+	OAuth Login</a>
 
-			<a class="itemInSidebar" href="cookies.html">
-			Cookie Login</a>
+      <a class="itemInSidebar" href="cookies.html">
+	Cookie Login</a>
 
-			<a class="itemInSidebar" href="listings.html">
-			Listings</a>
+      <a class="itemInSidebar" href="listings.html">
+	Listings</a>
 
-			<a class="itemInSidebar" href="gotchas.html">
-			Gotcha's</a>
+      <a class="itemInSidebar" href="gotchas.html">
+	Gotcha's</a>
 
-			<a class="itemInSidebar" href="advancedUsage.html">
-			Advanced Usage</a>
+      <a class="itemInSidebar" href="advancedUsage.html">
+	Advanced Usage</a>
 
-			<a class="itemInSidebar" href="node-vs-browser.html">
-			Node vs. Browser</a>
+      <a class="itemInSidebar" href="node-vs-browser.html">
+	Node vs. Browser</a>
 
-			<a class="itemInSidebar" href="promises.html">
-			Promises</a>
+      <a class="itemInSidebar" href="promises.html">
+	Promises</a>
 
-			<a class="itemInSidebar" href="tests.html">
-			Running Tests</a>
+      <a class="itemInSidebar" herf="migration.html">
+	Migration Guide</a>
 
-		</div>
+      <a class="itemInSidebar" href="tests.html">
+	Running Tests</a>
 
-		<div class="site">
-			<div class="siteContent">{{ content }}</div>
-		</div>
+    </div>
 
-	</body>
+    <div class="site">
+      <div class="siteContent">{{ content }}</div>
+    </div>
+
+  </body>
 </html>
