--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -53,7 +53,7 @@
       <a class="itemInSidebar" href="promises.html">
 	Promises</a>
 
-      <a class="itemInSidebar" herf="migration.html">
+      <a class="itemInSidebar" href="migration.html">
 	Migration Guide</a>
 
       <a class="itemInSidebar" href="tests.html">
