--- a/css/main.css
+++ b/css/main.css
@@ -1,11 +1,16 @@
 body {
 }
 
+img {
+  width: 100%;
+  height: auto;
+}
+
 .sidebar {
-	position: fixed;
-	top: 0; left: 0; bottom: 0;
-	width: 220px;
-	background-color: #333;
+  position: fixed;
+  top: 0; left: 0; bottom: 0;
+  width: 220px;
+  background-color: #333;
 }
 
 .sidebarTitle {
