--- a/css/custom.css
+++ b/css/custom.css
@@ -1,3 +1,72 @@
+
+a {
+  text-decoration: none;
+}
+
+img {
+  max-width: 100%;
+  box-sizing: border-box;
+  border-right: 2px #EEEEFF solid;
+  border-bottom: 2px #EEEEFF solid;
+}
+
+/* let pre wrap */
+pre {
+  white-space: pre-wrap;       /* css-3 */
+  white-space: -moz-pre-wrap;  /* Mozilla, since 1999 */
+  white-space: -pre-wrap;      /* Opera 4-6 */
+  white-space: -o-pre-wrap;    /* Opera 7 */
+  word-wrap: break-word;       /* Internet Explorer 5.5+ */
+  max-width: 100%;
+}
+
+blockquote {
+  margin: 1rem 0;
+  border-left: 2px solid #EEEEEE;
+  padding: 0 0 0 0.5rem;
+  background-color: #FAFAFA;
+}
+
+.wrapper {
+  position: relative;
+}
+
+.sidebar {
+  float: left;
+  border-right: 2px #EEEEFF solid;
+  width: 190px;
+  padding: 10px;
+}
+
+.my-content {
+  margin-left: 190px;
+  padding: 20px 50px;
+}
+
+/* Larger than phablet */
+/* Bigger than 550 */
+@media (min-width: 550px) {
+
+}
+
+/* Larger than tablet */
+/* Bigger than 750 */
+@media (min-width: 750px) {
+
+}
+
+/* Larger than desktop */
+/* Bigger than 1000 */
+@media (min-width: 1000px) {
+
+}
+
+
+
+
+/* Syntax highlighting styles */
+/* ----------------------------------------------------------*/
+
 .highlight  { background: #ffffff; }
 .highlight .c { color: #999988; font-style: italic } /* Comment */
 .highlight .err { color: #a61717; background-color: #e3d2d2 } /* Error */
