fixed issue with conflicting css names
tsenior.com also has a custom.css file that was preventing the custom /snoocore documentation from displaying properly

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -22,7 +22,7 @@
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <link rel="stylesheet" href="{{ "/css/normalize.css" | prepend: site.baseurl }}">
   <link rel="stylesheet" href="{{ "/css/skeleton.css" | prepend: site.baseurl }}">
-  <link rel="stylesheet" href="{{ "/css/custom.css" | prepend: site.baseurl }}">
+  <link rel="stylesheet" href="{{ "/css/custom-snoocore.css" | prepend: site.baseurl }}">
 
   <!-- Favicon
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
