update docs for 2.2.0

--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -8,6 +8,7 @@
       <li><a href="install.html">Install & Include</a></li>
       <li><a href="basicUsage.html">Basic Usage</a></li>
       <li><a href="config.html">Config Options</a></li>
+      <li><a href="commonErrors.html">Common Errors</a></li>
     </ul>
   </li>
 
@@ -30,14 +31,15 @@
     </ul>
   </li>
 
+  <li><a href="advancedUsage.html">Advanced Usage</a></li>
+
   <li>Resources
     <ul>
-      <li><a href="gotchas.html">Gotcha's</a></li>
       <li><a href="migration.html">Migration Guide</a></li>
       <li><a href="tests.html">Running Tests</a></li>
-      <li><a href="advancedUsage.html">Advanced Usage</a></li>
       <li><a href="node-vs-browser.html">Node vs. Browser</a></li>
       <li><a href="promises.html">Promises</a></li>
     </ul>
   </li>
+
 </ul>
