--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -31,6 +31,7 @@
     </ul>
   </li>
 
+  <li><a href="events.html">Events</a></li>
   <li><a href="advancedUsage.html">Advanced Usage</a></li>
 
   <li>Resources
