--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -32,6 +32,7 @@
   </li>
 
   <li><a href="events.html">Events</a></li>
+  <li><a href="fileUpload.html">File Upload</a></li>
   <li><a href="advancedUsage.html">Advanced Usage</a></li>
 
   <li>Resources
