Add a link to misc. fn's in sidebar
Issue #120

--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -19,6 +19,7 @@
 	<li><a href="oauth-script.html">Script</a></li>
 	<li><a href="oauth-explicit.html">Explicit</a></li>
 	<li><a href="oauth-implicit.html">Implicit</a></li>
+	<li><a href="miscellaneous-oauth-fns.html">Misc. Fns</a></li>
       </ul>
   </li>
   <li><a href="cookies.html">Cookie</a></li>
